--- a/browser/css/color-palette.css
+++ b/browser/css/color-palette.css
@@ -29,6 +29,7 @@
 
 	--color-canvas: #f0f0f0;
 	--color-scrollbar-thumb: #7E8182;
+	--color-scrollbar-railway: #EFEFEF;
 
 	--color-primary: #0b87e7; /* border-color */
 	--color-primary-text: #fff; /* text color when primary-lighter is background */
